# CUBIC-Render

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_base.bat  build_debug.bat  build_post.bat  build_release.bat  build_relwithdebinfo.bat  compress_lib.ps1  decompress_lib.ps1
.github/workflows/: build.yml
config/: defaultConfig.json  exampleConfig.json
gl/: rhiGL.cpp  rhiGL.h
gltf/Johanna/: Johanna.gltf
main/: main.cpp  main.hpp  rhi.h
render/: dataType.h  render.cu  render.h  renderFunc.cu  renderFunc.h  renderTool.h  shader.h
src/: CMakeLists.txt  data.h  main.cpp  main.hpp  rasterize.cu  rasterize.h  rasterizeTools.h  shader.h
util/: CMakeLists.txt  checkCUDAError.h  json.hpp  utilityCore.cpp  utilityCore.hpp
vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanMacro.h  VulkanShader.h  VulkanSharedBuffer.cpp  VulkanSharedBuffer.h  rhiVK.cpp  rhiVK.h
